Fix Header height styles and z-index

--- a/src/App/components/Header/style.css
+++ b/src/App/components/Header/style.css
@@ -94,6 +94,7 @@
     border-bottom: 0;
     max-height: 0;
     width: 100%;
+    z-index: 1;
     position: absolute;
     top: 60px;
     left: 0;
@@ -103,14 +104,15 @@
     @media(--header-desktop) {
       background-color: var(--white);
       border-bottom: var(--black-border);
-      height: auto;
+      max-height: none;
       position: relative;
       top: 0;
       text-align: center;
     }
 
     &.menu-active {
-      max-height: 9999px;
+      max-height: 99999px;
+      min-height: 100%;
     }
 
     & > a,
